--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="splash">Splash Activity</string>
     <string name="restaurants">Restaurants Activity</string>
     <string name="app_name">Restaurants Application</string>
+    <string name="favorite">Favorite</string>
 </resources>
